--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
-            <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">CONTACTO</li></a>
+            <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>
 
         <img src="img/banner.jpg" class="rounded height shadow" width="100%" alt="">
