--- a/contacto.html
+++ b/contacto.html
@@ -29,11 +29,21 @@
     </div>
 
     <div class="container-fluid wd mt-5">
-        <p class="text-center mb-5 text-white">Ponte en contacto a través de este formulario o a los teléfonos que aparecen más abajo.</p>
-
+        <p class="text-center mb-5 text-white">Ponte en contacto a través de este formulario o a los teléfonos que aparecen al pie.</p>
+        <form action="" method="post">
+            <div class="m-2 bg-white p-2 rounded">
+                Nombre: <input type="text">
+                Email: <input type="text"><br>
+            </div>
+            <div class="rounded bg-white p-2 border p-2 m-2">
+                <textarea class="border border-none border-white" name="" id="" cols="100%" rows="10"></textarea><br>
+            </div>
+            <input type="submit"class="btn btn-success btn-block m-2">
+        </form>
         
 
     </div>
+
 
    
    
