--- a/contacto.html
+++ b/contacto.html
@@ -31,12 +31,12 @@
     <div class="container-fluid wd mt-5">
         <p class="text-center mb-5 text-white">Ponte en contacto a través de este formulario o a los teléfonos que aparecen al pie.</p>
         <form action="" method="post">
-            <div class="m-2 bg-white p-2 rounded">
-                Nombre: <input type="text">
-                Email: <input type="text"><br>
+            <div class="m-2 bg-white p-3 rounded">
+                Nombre: <input type="text" class="m-1 w-100"><br>
+                Email: <input type="text"  class="m-1 w-100" ><br>
             </div>
             <div class="rounded bg-white p-2 border p-2 m-2">
-                <textarea class="border border-none border-white" name="" id="" cols="100%" rows="10"></textarea><br>
+                <textarea class="border border-none border-white w-100" rows="10"></textarea><br>
             </div>
             <input type="submit"class="btn btn-success btn-block m-2">
         </form>
