--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dancing+Script&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Regala Vida</title>
 </head>
 <body>
     <h1 class="font-title mt-5" style="color:white; text-align: center; font-size: 58px;">Regala Vida</h1>
@@ -87,12 +87,14 @@
         </p>
         <p class="">Ahora tienes la oportunidad de cambiar la vida de una increible persona.</p>
         <img src="img/arrowpointdown.gif" alt="" srcset="">
-        <p class="h1 text-purple">Dona</p>
-        <p class="display-1 fw-1 text-danger my-4"><strong>$499</strong> </p>
-        <img src="img/R.png" width="100" alt="" srcset="">
-        <img src="img/Google-Pay-Logo-01.png" width="100" alt="" srcset="">
-        <img src="img/v.png" width="100" alt="" srcset="">
-
+        <br>
+        <!-- <p class="h1 text-purple">Dona</p> -->
+        
+        <a href="https://www.paypal.com/donate/?hosted_button_id=4LDP3EFPS5M9N"><img src="img/boton.png" width="300px" alt="donar"></a> <br>
+        <img src="img/v.png" width="150px"><br>
+        <img src="img/Código QR.png" class="mt-3">
+        <p class="text-white mt-2 p-0">Puede utilizar nuestro código QR</p>
+        
     </div>
 
 
