--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid text-center">
 
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
-            <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
+            <a class="text-decoration-none hover act" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
             <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>
@@ -35,6 +35,9 @@
                 <p class="p-3 shadow-sm rounded bg-purple-light mt-5 text-center ">El lema <strong style="color: blueviolet;">"Regala Vida, Vence al Cáncer"</strong> sugiere que al hacer donaciones, las personas están contribuyendo a brindar esperanza y mejorar la calidad de vida de quienes luchan contra él.</p>
             </div>
             <div class="col-1"></div>
+            <div class="col-12 text-center">
+                <img src="img/personas.jpg" class="shadow" width="200">
+            </div>
         </div>
        
     </div>
