cambios en bios

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
-            <a class="text-decoration-none hover act" href="contacto.html"><li class="p-2">CONTACTO</li></a>
+            <a class="text-decoration-none act" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>
 
         
