--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid text-center">
 
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
-            <a class="text-decoration-none hover act" href="index.html"><li class="p-2">INCIO</li></a>
+            <a class="text-decoration-none act" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
             <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>
@@ -95,8 +95,8 @@
         
         <a href="https://www.paypal.com/donate/?hosted_button_id=4LDP3EFPS5M9N"><img src="img/boton.png" width="300px" alt="donar"></a> <br>
         <img src="img/v.png" width="150px"><br>
-        <img src="img/Código QR.png" class="mt-3">
-        <p class="text-white mt-2 p-0">Puede utilizar nuestro código QR</p>
+        <!-- <img src="img/Código QR.png" class="mt-3">
+        <p class="text-white mt-2 p-0">Puede utilizar nuestro código QR</p> -->
         
     </div>
 
