--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
 
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
-            <a class="text-decoration-none hover act" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
+            <a class="text-decoration-none act" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
             <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>
 
@@ -35,16 +35,16 @@
 
         <div class="row mt-5">
             <div class="col-sm-3 col-md-3 text-center">
-                <img class="rounded-circle shadow w-75 border border-5" src="img/1.jpg"><p class="mt-3 fs-name">María Paula Díaz Meza</p class="text-white">
+                <img class="rounded-circle shadow w-75 border border-5" src="img/1.jpg"><p class="mt-3 format-name">@PauDiaz</p>
             </div>
             <div class="col-sm-3 col-md-3 text-center">
-                <img class="rounded-circle shadow w-75 border border-5" src="img/2.jpg"><p class="mt-3 fs-name">Imelda Padilla Rojas</p class="text-white">
+                <img class="rounded-circle shadow w-75 border border-5" src="img/2.jpg"><p class="mt-3 format-name">@ImeRojas</p>
             </div>
             <div class="col-sm-3 col-md-3 text-center">
-                <img class="rounded-circle shadow w-75 border border-5" src="img/3.jpg"><p class="mt-3 fs-name">Brisa Yocelin Hernández Sánchez</p class="text-white">
+                <img class="rounded-circle shadow w-75 border border-5" src="img/3.jpg"><p class="mt-3 format-name">@BrisaHernandez</p>
             </div>
             <div class="col-sm-3 col-md-3 text-center">
-                <img class="rounded-circle shadow w-75 border border-5" src="img/4.jpg"><p class="mt-3 fs-name">Ernesto Ávila Hernández</p class="text-white">
+                <img class="rounded-circle shadow w-75 border border-5" src="img/4.jpg"><p class="mt-3 format-name">@ErneAvila</p>
             </div>
     
         </div>
