quitar fondo blanco a medalla

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     </div>
 
-    <div class="container-fluid mt-5 text-center bg-white rounded">
+    <div class="container-fluid mt-5 text-center rounded">
         <img src="img/galardon.png" width="40%">
     </div>
 
