imagenes centradas en campanias

--- a/campanias.html
+++ b/campanias.html
@@ -28,17 +28,20 @@
     </div>
 
     <p class="h1 color-purple text-center">¡Ayudalos!</p>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
+
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Infantil</p>
-                <img src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                <img class="rounded shadow text-center" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
             </div>
+
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Adultos Mayores</p>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cdc.gov%2Fspanish%2Fcancer%2Fpreventinfections%2Fpatients.htm&psig=AOvVaw3z9HPECtgSqFZoZOBWegho&ust=1696437150051000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIC4uYCn2oEDFQAAAAAdAAAAABAE" alt="">
+                <img class="rounded shadow text-center" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cdc.gov%2Fspanish%2Fcancer%2Fpreventinfections%2Fpatients.htm&psig=AOvVaw3z9HPECtgSqFZoZOBWegho&ust=1696437150051000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIC4uYCn2oEDFQAAAAAdAAAAABAE" alt="">
             </div>
         </div>
+
     </div>
     
 
