--- a/campanias.html
+++ b/campanias.html
@@ -21,7 +21,7 @@
         <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none text-white hover" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
-            <a class="text-decoration-none act" href="nosotros.html"><li class="p-2">CAMPAÑAS</li></a>
+            <a class="text-decoration-none act" href="campanias.html"><li class="p-2">CAMPAÑAS</li></a>
             <a class="text-decoration-none text-white hover" href="contacto.html"><li class="p-2">CONTACTO</li></a>
         </ul>  
 
@@ -34,6 +34,14 @@
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Infantil</p>
                 <img class="rounded shadow text-center" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                <div class="text-center">
+                    <form action="https://www.paypal.com/donate" method="post" target="_top">
+                        <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
+                        <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
+                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
+                        </form>
+                        
+                </div>
             </div>
 
             <div class="col-6">
