--- a/campanias.html
+++ b/campanias.html
@@ -33,7 +33,7 @@
 
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Infantil</p>
-                <img class="rounded shadow text-center" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                <img class="rounded shadow text-center" width="100%" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
                 <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
@@ -46,7 +46,15 @@
 
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Adultos Mayores</p>
-                <img class="rounded shadow text-center" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cdc.gov%2Fspanish%2Fcancer%2Fpreventinfections%2Fpatients.htm&psig=AOvVaw3z9HPECtgSqFZoZOBWegho&ust=1696437150051000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIC4uYCn2oEDFQAAAAAdAAAAABAE" alt="">
+                <img class="rounded shadow text-center" width="100%" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cdc.gov%2Fspanish%2Fcancer%2Fpreventinfections%2Fpatients.htm&psig=AOvVaw3z9HPECtgSqFZoZOBWegho&ust=1696437150051000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIC4uYCn2oEDFQAAAAAdAAAAABAE" alt="">
+                <div class="text-center">
+                    <form action="https://www.paypal.com/donate" method="post" target="_top">
+                        <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
+                        <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
+                        <img alt="" border="0" src="https://www.paypal.com/es_MX/i/scr/pixel.gif" width="1" height="1" />
+                        </form>
+                        
+                </div>
             </div>
         </div>
 
