--- a/campanias.html
+++ b/campanias.html
@@ -46,7 +46,7 @@
 
             <div class="col-6">
                 <p class="text-purple text-center">Cácer Adultos Mayores</p>
-                <img class="rounded shadow text-center" width="100%" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cdc.gov%2Fspanish%2Fcancer%2Fpreventinfections%2Fpatients.htm&psig=AOvVaw3z9HPECtgSqFZoZOBWegho&ust=1696437150051000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIC4uYCn2oEDFQAAAAAdAAAAABAE" alt="">
+                <img class="rounded shadow text-center" width="100%" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
                 <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
