--- a/campanias.html
+++ b/campanias.html
@@ -32,8 +32,8 @@
         <div class="row">
 
             <div class="col-6">
-                <p class="text-purple text-center">Cácer Infantil</p>
-                <img class="rounded shadow text-center" width="100%" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                <p class="h3 text-purple text-center">Cácer Infantil</p>
+                <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
                 <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
@@ -45,8 +45,8 @@
             </div>
 
             <div class="col-6">
-                <p class="text-purple text-center">Cácer Adultos Mayores</p>
-                <img class="rounded shadow text-center" width="100%" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
+                <p class="h3 text-purple text-center">Cácer Adultos Mayores</p>
+                <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
                 <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
