--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -34,7 +34,7 @@
             <div class="col-6">
                 <p class="h3 text-purple text-center">Cácer Infantil</p>
                 <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
-                <div class="text-center mt-3">
+                <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
                         <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
@@ -47,7 +47,7 @@
             <div class="col-6">
                 <p class="h3 text-purple text-center">Cácer Adultos Mayores</p>
                 <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
-                <div class="text-center mt-3">
+                <div class="text-center">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
                         <input type="image" src="https://www.paypalobjects.com/es_XC/MX/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar con el botón PayPal" />
