--- a/campanias.html
+++ b/campanias.html
@@ -33,7 +33,9 @@
 
             <div class="col-6">
                 <p class="h3 text-purple text-center">Cácer Infantil</p>
-                <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                <a href="camp_infantil.html">
+                    <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
+                </a>
                 <div class="text-center mt-3">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
@@ -46,7 +48,9 @@
 
             <div class="col-6">
                 <p class="h3 text-purple text-center">Cácer Adultos Mayores</p>
-                <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
+                <a href="camp_adulto.html">
+                    <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" />
+                </a>
                 <div class="text-center mt-3">
                     <form action="https://www.paypal.com/donate" method="post" target="_top">
                         <input type="hidden" name="hosted_button_id" value="UHYAUDVCSYZ82" />
