--- a/campanias.html
+++ b/campanias.html
@@ -27,7 +27,7 @@
 
     </div>
 
-    <p class="h1 color-purple text-center">¡Ayudalos!</p>
+    <p class="h1 text-purple text-center">¡Ayudalos!</p>
     <div class="container mt-5">
         <div class="row">
 
