modif a cam infantil

--- a/camp_infantil.html
+++ b/camp_infantil.html
@@ -34,7 +34,7 @@
             <div class="col-6">
                 <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
                 <div class="text-justify">
-                    <p class="h2 text-center">Datos sobre el cáncer infantil</p>
+                    <p class="h2 text-center mt-2">Datos sobre el cáncer infantil</p>
                     
                         <ul class="h5 text-white">
                             <li>El cáncer es una de las principales causas de mortalidad entre niños y adolescentes en todo el mundo; cada año se diagnostica cáncer a aproximadamente 280.000 niños de entre 0 y 19 años.</li>
