--- a/camp_infantil.html
+++ b/camp_infantil.html
@@ -27,19 +27,19 @@
 
     </div>
 
-    <p class="h1 color-purple text-center">¡Cáncer Infantil!</p>
+    <p class="h1 text-purple text-center">¡Cáncer Infantil!</p>
     <div class="container mt-5">
         <div class="row">
 
             <div class="col-12">
                 <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
                 <div class="text-justify">
-                    <p class="h2 text-center mt-2">Datos sobre el cáncer infantil</p>
+                    <p class="h2 text-center text-purple mt-5">Datos sobre el cáncer infantil</p>
                     
                         <ul class="h5 text-white">
-                            <li>El cáncer es una de las principales causas de mortalidad entre niños y adolescentes en todo el mundo; cada año se diagnostica cáncer a aproximadamente 280.000 niños de entre 0 y 19 años.</li>
-                            <li>En América Latina y el Caribe, se estima que al menos 29.000 niñas, niños y adolescentes menores de 19 años resultarán afectados por el cáncer anualmente. De ellos, cerca de 10.000 fallecerán a causa de esta enfermedad.</li>
-                            <li>En los países de ingresos altos, más del 80% de los niños afectados de cáncer se curan, pero en muchos países de ingresos medianos y bajos la tasa de curación es de aproximadamente el 20%</li>
+                            <li>El cáncer es una de las principales causas de mortalidad entre niños y adolescentes en todo el mundo; cada año se diagnostica cáncer a aproximadamente 280.000 niños de entre 0 y 19 años.</li> <br>
+                            <li>En América Latina y el Caribe, se estima que al menos 29.000 niñas, niños y adolescentes menores de 19 años resultarán afectados por el cáncer anualmente. De ellos, cerca de 10.000 fallecerán a causa de esta enfermedad.</li> <br>
+                            <li>En los países de ingresos altos, más del 80% de los niños afectados de cáncer se curan, pero en muchos países de ingresos medianos y bajos la tasa de curación es de aproximadamente el 20%</li><br>
                             <li>El impacto del cáncer infantil se traduce en años de vida perdidos, en mayores desigualdades y en dificultades económicas. Esto puede y debe cambiar.</li>
                         </ul>
                     <p class="text-center text-purple h2">
