--- a/camp_infantil.html
+++ b/camp_infantil.html
@@ -28,7 +28,7 @@
     </div>
 
     <p class="h1 text-purple text-center">¡Cáncer Infantil!</p>
-    <div class="container mt-5">
+    <div class="container mt-5 w-75">
         <div class="row">
 
             <div class="col-12">
@@ -44,7 +44,7 @@
                         </ul>
                     <p class="text-center text-purple h2">
                         Los fondos recaudados servirán para la compra de medicamentos y quimioterapias. 
-                    </p>  
+                    </p>
                     
                 </div>
                 <div class="text-center mt-5">
