css modificado important

--- a/campanias.html
+++ b/campanias.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-6">
-                <p class="h3 text-purple text-center">Cácer Adultos Mayores</p>
+                <p class="h3 text-purple text-center">Cácer en Adultos Mayores</p>
                 <a href="camp_adulto.html">
                     <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" />
                 </a>
