--- a/camp_infantil.html
+++ b/camp_infantil.html
@@ -60,6 +60,10 @@
 
             
         </div>
+        <div class="float-right">
+            <a href="camp_adulto.html" class="text-decoration-none text-purple"></a>
+            <span>&#8594;</span>
+        </div>
 
     </div>
     
