--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container-fluid text-center">
 
-        <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
+        <ul class="menu d-sm-flex flex-sm-column d-md-flex d-md-row d-lg-flex d-lg-row justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none act" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
             <a class="text-decoration-none text-white hover" href="campanias.html"><li class="p-2">CAMPAÑAS</li></a>
