--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container-fluid text-center">
 
-        <ul class="menu d-sm-flex flex-sm-column d-md-flex d-md-row d-lg-flex d-lg-row justify-content-center my-5 m-0 p-0 fs-23">
+        <ul class="menu justify-content-center my-5 m-0 p-0 fs-23">
             <a class="text-decoration-none act" href="index.html"><li class="p-2">INCIO</li></a>
             <a class="text-decoration-none text-white hover" href="nosotros.html"><li class="p-2">NOSOTROS</li></a>
             <a class="text-decoration-none text-white hover" href="campanias.html"><li class="p-2">CAMPAÑAS</li></a>
@@ -101,9 +101,6 @@
         
     </div>
 
-
-    
-
     <!-- <div class="colores mt-5">a</div> -->
 
     <div class="bg-purple-dark">
@@ -114,8 +111,6 @@
         </div>
         <p class="text-center text-white p-0 m-0">COPYRIGHT © 2023 Regala Vida - Todos los derechos reservados.</p>
     </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
