columnas en campanias

--- a/campanias.html
+++ b/campanias.html
@@ -31,7 +31,7 @@
     <div class="container mt-5">
         <div class="row">
 
-            <div class="col-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <p class="h3 text-purple text-center">Cácer Infantil</p>
                 <a href="camp_infantil.html">
                     <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <p class="h3 text-purple text-center">Cácer en Adultos Mayores</p>
                 <a href="camp_adulto.html">
                     <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" />
