--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -28,7 +28,7 @@
     </div>
     
     <p class="h1 text-purple text-center">¡Cáncer en Adultos Mayores!</p>
-    <div class="container mt-5 w-50">
+    <div class="container mt-5">
         <div class="row">
             
             <div class="col-12">
