--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -55,9 +55,11 @@
                     </form>
                 </div>
             </div>
-
-
-            
+        </div>
+        <div class="float-end">
+            <a href="camp_infantil.html" class="text-decoration-none text-purple">
+                <span>&#8594;</span>
+            </a>
         </div>
 
     </div>
