--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -36,7 +36,7 @@
                 <div class="text-justify">
                     <p class="h2 text-center text-purple mt-5">Datos sobre el cáncer en Adultos Mayores</p>
                     
-                        <ul class="h5 text-white" style="list-style: none;">
+                        <ul class="h5 text-white m-0" style="list-style: none;">
                             <li>El cáncer es más común en adultos mayores. A medida que envejecemos, nuestras células pueden acumular mutaciones genéticas y daños en el ADN con el tiempo, lo que aumenta el riesgo de desarrollar cáncer.</li> <br>
                             <li>Los tipos de cáncer más comunes en adultos mayores incluyen el cáncer de próstata en hombres, el cáncer de mama en mujeres, el cáncer de pulmón, el cáncer colorrectal y el cáncer de vejiga. Sin embargo, pueden desarrollarse cánceres en cualquier parte del cuerpo.</li> <br>
                             <li>Además del envejecimiento, otros factores de riesgo para el cáncer en adultos mayores incluyen el tabaquismo, la exposición prolongada al sol, la dieta poco saludable, la falta de actividad física y la historia familiar de cáncer.</li><br>
