--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -36,12 +36,12 @@
                 <div class="text-justify">
                     <p class="h2 text-center text-purple mt-5">Datos sobre el cáncer en Adultos Mayores</p>
                     
-                        <ul class="h5 text-white m-0" style="list-style: none;">
-                            <li>El cáncer es más común en adultos mayores. A medida que envejecemos, nuestras células pueden acumular mutaciones genéticas y daños en el ADN con el tiempo, lo que aumenta el riesgo de desarrollar cáncer.</li> <br>
-                            <li>Los tipos de cáncer más comunes en adultos mayores incluyen el cáncer de próstata en hombres, el cáncer de mama en mujeres, el cáncer de pulmón, el cáncer colorrectal y el cáncer de vejiga. Sin embargo, pueden desarrollarse cánceres en cualquier parte del cuerpo.</li> <br>
-                            <li>Además del envejecimiento, otros factores de riesgo para el cáncer en adultos mayores incluyen el tabaquismo, la exposición prolongada al sol, la dieta poco saludable, la falta de actividad física y la historia familiar de cáncer.</li><br>
-                            <li>Los síntomas del cáncer pueden variar según el tipo y la ubicación del tumor. Es importante que los adultos mayores estén atentos a cambios en su salud, como pérdida de peso inexplicada, sangrado anormal, dificultad para tragar, tos persistente y cambios en los hábitos intestinales. Las pruebas de detección, como las mamografías y las colonoscopias, son esenciales para detectar el cáncer en sus etapas iniciales.</li>
-                        </ul>
+                        <div class="fs-3 text-white">
+                            <p>El cáncer es más común en adultos mayores. A medida que envejecemos, nuestras células pueden acumular mutaciones genéticas y daños en el ADN con el tiempo, lo que aumenta el riesgo de desarrollar cáncer.</p>
+                            <p>Los tipos de cáncer más comunes en adultos mayores incluyen el cáncer de próstata en hombres, el cáncer de mama en mujeres, el cáncer de pulmón, el cáncer colorrectal y el cáncer de vejiga. Sin embargo, pueden desarrollarse cánceres en cualquier parte del cuerpo.</p> 
+                            <p>Además del envejecimiento, otros factores de riesgo para el cáncer en adultos mayores incluyen el tabaquismo, la exposición prolongada al sol, la dieta poco saludable, la falta de actividad física y la historia familiar de cáncer.</p>
+                            <p>Los síntomas del cáncer pueden variar según el tipo y la ubicación del tumor. Es importante que los adultos mayores estén atentos a cambios en su salud, como pérdida de peso inexplicada, sangrado anormal, dificultad para tragar, tos persistente y cambios en los hábitos intestinales. Las pruebas de detección, como las mamografías y las colonoscopias, son esenciales para detectar el cáncer en sus etapas iniciales.</p>
+                        </div>
                     <p class="text-center text-purple h2">
                         Los fondos recaudados servirán para la compra de medicamentos y quimioterapias. 
                     </p>
