--- a/campanias.html
+++ b/campanias.html
@@ -32,7 +32,7 @@
         <div class="row">
 
             <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
-                <p class="h3 text-purple text-center">Cácer Infantil</p>
+                <p class="h3 text-purple text-center">Cáncer Infantil</p>
                 <a href="camp_infantil.html">
                     <img class="rounded shadow text-center" width="100%" height="300" src="https://www.consumer.es/app/uploads/2021/02/canceres-infantiles-frecuentes.jpg" />
                 </a>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-sm-12 col-md-6 col-lg-6 mt-5">
-                <p class="h3 text-purple text-center">Cácer en Adultos Mayores</p>
+                <p class="h3 text-purple text-center">Cáncer en Adultos Mayores</p>
                 <a href="camp_adulto.html">
                     <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" />
                 </a>
