formateo de campañas

--- a/camp_adulto.html
+++ b/camp_adulto.html
@@ -31,12 +31,12 @@
     <div class="container mt-5">
         <div class="row">
             
-            <div class="col-12">
+            <div class="col-12 w-100">
                 <img class="rounded shadow text-center" width="100%" height="300" src="https://www.cdc.gov/cancer/preventinfections/images/man-chemo-350.jpg" alt="">
                 <div class="text-justify">
                     <p class="h2 text-center text-purple mt-5">Datos sobre el cáncer en Adultos Mayores</p>
                     
-                        <div class="fs-3 text-white">
+                        <div class="fs-4 p-2 text-white">
                             <p>El cáncer es más común en adultos mayores. A medida que envejecemos, nuestras células pueden acumular mutaciones genéticas y daños en el ADN con el tiempo, lo que aumenta el riesgo de desarrollar cáncer.</p>
                             <p>Los tipos de cáncer más comunes en adultos mayores incluyen el cáncer de próstata en hombres, el cáncer de mama en mujeres, el cáncer de pulmón, el cáncer colorrectal y el cáncer de vejiga. Sin embargo, pueden desarrollarse cánceres en cualquier parte del cuerpo.</p> 
                             <p>Además del envejecimiento, otros factores de riesgo para el cáncer en adultos mayores incluyen el tabaquismo, la exposición prolongada al sol, la dieta poco saludable, la falta de actividad física y la historia familiar de cáncer.</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="float-end">
-            <a href="camp_infantil.html" class="text-decoration-none text-purple">
+            <a href="camp_infantil.html" class="text-decoration-none text-purple fs-1">
                 <span>&#8594;</span>
             </a>
         </div>
