cambio de fuente en menu

--- a/nosotros.html
+++ b/nosotros.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container-fluid wd mt-5">
-        <p class="text-center mb-5 text-white">Regala Vida, es una asociación sin fines de lucro que recauda fondos para ayudar a personas con afecciones causadas por el Cáncer. Nuestra misión es lograr que las personas consigan una mejor calidad de vida a través del logro de sus sueños y objetivos.</p>
+        <p class="text-center mb-5 text-white fs-4">Regala Vida, es una asociación sin fines de lucro que recauda fondos para ayudar a personas con afecciones causadas por el Cáncer. Nuestra misión es lograr que las personas consigan una mejor calidad de vida a través del logro de sus sueños y objetivos.</p>
 
         <p class="text-center text-white mb-5 bg-purple-dark rounded p-2 shadow">Nuestros equipo de trabajo está conformado por estudiantes activos, con un gran espiritu de servicio, quienes ponen a disposición de la asociación todo su talento.</p>
 
